fix: ie Edge Scrollbar visible
Replace scroll with auto

--- a/assets/index.less
+++ b/assets/index.less
@@ -45,10 +45,6 @@
     box-sizing: border-box;
   }
 
-  &-fixed-header &-scroll &-hide-scrollbar{
-    overflow: hidden;
-  }
-  
   &-hide-scrollbar {
     scrollbar-color: transparent transparent;
     &::-webkit-scrollbar {
